首页分支sir修改

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Vi</title>
+  <title>Z</title>
   <meta name="Description" content="Home Page of iissnan">
   <meta name="color-scheme" content="dark light">
   <script>(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
@@ -13,7 +13,7 @@
 
 <body>
   <div class="vi">
-    <h1 class="animate-slide-in-down">Vi</h1>
+    <h1 class="animate-slide-in-down">Z</h1>
     <div class="quote">
       <span class="quote-line quote-line-start animate-slide-in-left"></span>
       <span class="quote-icon quote-icon-start animate-slide-in-down">
@@ -28,15 +28,15 @@
     </div>
     <div class="links">
       <a href="https://github.com/iissnan" class="animate-slide-in-down">GitHub</a>
-      <a href="https://notes.iissnan.com" class="animate-slide-in-down">Notes</a>
-      <a href="https://douban.com/people/iissnan" class="animate-slide-in-down">DouBan</a>
+      <a href="https://nav.qinight.com/" class="animate-slide-in-down">Nav</a>
+      <a href="/work" class="animate-slide-in-down">Work</a>
       <a href="https://weibo.com/iissnan" class="animate-slide-in-down">WeiBo</a>
     </div>
     <div class="location">
       <span class="location-icon animate-slide-in-up">
         <i class="icon icon-map-pin"></i>
       </span>
-      <span class="location-text animate-slide-in-down">XiaMen - China</span>
+      <span class="location-text animate-slide-in-down">YingHan - China</span>
     </div>
     <div class="relocating">
       Navigating to: <span class="relocate-location"></span>...
