修改路由跳转

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="links">
       <a href="https://github.com/iissnan" class="animate-slide-in-down">GitHub</a>
       <a href="https://nav.qinight.com/" class="animate-slide-in-down">Nav</a>
-      <a href="/work" class="animate-slide-in-down">Work</a>
+      <a href="/web" class="animate-slide-in-down">Work</a>
       <a href="https://weibo.com/iissnan" class="animate-slide-in-down">WeiBo</a>
     </div>
     <div class="location">
